App works on mobile, except the offset bug
App works cross-platform, global style is applied everywhere, and the mongodb backend server address has been abstracted to a single string in IWDB.ts which can be changed easily.

--- a/source/client/src/style.css
+++ b/source/client/src/style.css
@@ -14,6 +14,11 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  overflow-x: hidden;
+  overflow-y: hidden;
+  
+  touch-action: none;
 }
 
 body {
